Work on fixing bugs