@@ -34,6 +34,7 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Map;
@@ -45,79 +46,77 @@ import java.util.regex.Pattern;
  */
 public final class ApplicationsUpdater implements Updater {
 
-    /**
-     * The folder in which the installed applications of the cloud versions are located
-     */
-    private static final Path APP_FOLDER = Path.of("reformcloud/applications");
+  /**
+   * The folder in which the installed applications of the cloud versions are located
+   */
+  private static final Path APP_FOLDER = Paths.get("reformcloud/applications");
 
-    /**
-     * The pattern to find a file update
-     */
-    private static final Pattern PATTERN = Pattern.compile("(.*)-(.*)\\.jar");
-    private final Path applicationUpdatesPath;
-    private final Collection<Map.Entry<Path, Path>> oldToNewUpdates;
+  /**
+   * The pattern to find a file update
+   */
+  private static final Pattern PATTERN = Pattern.compile("(.*)-(.*)\\.jar");
+  private final Path applicationUpdatesPath;
+  private final Collection<Map.Entry<Path, Path>> oldToNewUpdates;
 
-    /**
-     * Creates a new instance of an applications updater
-     *
-     * @param applicationUpdatesPath The path where the update files of the update files are located
-     */
-    public ApplicationsUpdater(@NotNull Path applicationUpdatesPath) {
-        this.applicationUpdatesPath = applicationUpdatesPath;
-        this.oldToNewUpdates = new ArrayList<>();
+  /**
+   * Creates a new instance of an applications updater
+   *
+   * @param applicationUpdatesPath The path where the update files of the update files are located
+   */
+  public ApplicationsUpdater(@NotNull Path applicationUpdatesPath) {
+    this.applicationUpdatesPath = applicationUpdatesPath;
+    this.oldToNewUpdates = new ArrayList<>();
+  }
+
+  @Override
+  public void collectInformation() {
+    if (Files.notExists(this.applicationUpdatesPath)) {
+      return;
     }
 
-    @Override
-    public void collectInformation() {
-        if (Files.notExists(this.applicationUpdatesPath)) {
-            return;
+    try (DirectoryStream<Path> stream = Files.newDirectoryStream(this.applicationUpdatesPath, new JarFileDirectoryStreamFilter())) {
+      for (Path entry : stream) {
+        Matcher matcher = PATTERN.matcher(entry.getFileName().toString());
+        if (!matcher.find()) {
+          System.err.println("Unable to find match for \"file-name-version.jar\" " +
+            "is the requested format: " + entry.toString());
+          continue;
         }
 
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(this.applicationUpdatesPath, new JarFileDirectoryStreamFilter())) {
-            for (Path entry : stream) {
-                Matcher matcher = PATTERN.matcher(entry.getFileName().toString());
-                if (!matcher.find()) {
-                    System.err.println("Unable to find match for \"file-name-version.jar\" " +
-                        "is the requested format: " + entry.toString());
-                    continue;
-                }
+        String oldName = matcher.group(1);
+        Path old = RunnerUtils.findFile(
+          APP_FOLDER,
+          path -> path.getFileName().toString().startsWith(oldName),
+          new JarFileDirectoryStreamFilter()
+        );
 
-                String oldName = matcher.group(1);
-                Path old = RunnerUtils.findFile(
-                    APP_FOLDER,
-                    path -> path.getFileName().toString().startsWith(oldName),
-                    new JarFileDirectoryStreamFilter()
-                );
-
-                if (old != null) {
-                    this.oldToNewUpdates.add(new KeyValueHolder<>(old, entry));
-                }
-            }
-        } catch (final IOException ex) {
-            throw new RuntimeException(ex);
+        if (old != null) {
+          this.oldToNewUpdates.add(new KeyValueHolder<>(old, entry));
         }
+      }
+    } catch (final IOException ex) {
+      throw new RuntimeException(ex);
     }
+  }
 
-    @Override
-    public boolean hasNewVersion() {
-        return !this.oldToNewUpdates.isEmpty();
+  @Override
+  public boolean hasNewVersion() {
+    return !this.oldToNewUpdates.isEmpty();
+  }
+
+  @Override
+  public void applyUpdates() {
+    for (Map.Entry<Path, Path> oldToNewUpdate : this.oldToNewUpdates) {
+      RunnerUtils.deleteFileIfExists(oldToNewUpdate.getKey());
+
+      RunnerUtils.copy(oldToNewUpdate.getValue(), APP_FOLDER.resolve(oldToNewUpdate.getValue().getFileName()));
+      RunnerUtils.deleteFileIfExists(oldToNewUpdate.getValue());
     }
+  }
 
-    @Override
-    public void applyUpdates() {
-        for (Map.Entry<Path, Path> oldToNewUpdate : this.oldToNewUpdates) {
-            RunnerUtils.deleteFileIfExists(oldToNewUpdate.getKey());
-
-            RunnerUtils.copy(oldToNewUpdate.getValue(), Path.of(
-                APP_FOLDER + "/" + oldToNewUpdate.getValue().getFileName()
-            ));
-            RunnerUtils.deleteFileIfExists(oldToNewUpdate.getValue());
-        }
-    }
-
-    @NotNull
-    @Override
-    public String getName() {
-        return "application";
-    }
+  @NotNull
+  @Override
+  public String getName() {
+    return "application";
+  }
 }
