@@ -36,6 +36,7 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Optional;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -44,71 +45,71 @@ import java.util.function.Function;
 
 public class DefaultFileRegistry implements FileRegistry {
 
-    private final Path operatingFolder;
-    private final JsonAdapter backingAdapter;
+  private final Path operatingFolder;
+  private final JsonAdapter backingAdapter;
 
-    public DefaultFileRegistry(String operatingFolder, @Nullable JsonAdapter backingAdapter) {
-        this.operatingFolder = Path.of(operatingFolder);
-        IOUtils.createDirectory(this.operatingFolder);
-        this.backingAdapter = backingAdapter == null ? JsonConfiguration.DEFAULT_ADAPTER : backingAdapter;
+  public DefaultFileRegistry(String operatingFolder, @Nullable JsonAdapter backingAdapter) {
+    this.operatingFolder = Paths.get(operatingFolder);
+    IOUtils.createDirectory(this.operatingFolder);
+    this.backingAdapter = backingAdapter == null ? JsonConfiguration.DEFAULT_ADAPTER : backingAdapter;
+  }
+
+  @NotNull
+  @Override
+  public <T> T createKey(@NotNull String keyName, @NotNull T t) {
+    Path filePath = this.operatingFolder.resolve(keyName + ".json");
+    if (Files.exists(filePath)) {
+      return t;
     }
 
-    @NotNull
-    @Override
-    public <T> T createKey(@NotNull String keyName, @NotNull T t) {
-        Path filePath = this.operatingFolder.resolve(keyName + ".json");
-        if (Files.exists(filePath)) {
-            return t;
+    JsonConfiguration.newJsonConfiguration().add("key", t).write(filePath);
+    return t;
+  }
+
+  @NotNull
+  @Override
+  public <T> Optional<T> getKey(@NotNull String keyName) {
+    Path filePath = this.operatingFolder.resolve(keyName + ".json");
+    if (Files.notExists(filePath)) {
+      return Optional.empty();
+    }
+
+    return Optional.ofNullable(JsonConfiguration.newJsonConfiguration(filePath, this.backingAdapter).get("key", new TypeToken<T>() {
+    }.getType()));
+  }
+
+  @Override
+  public void deleteKey(@NotNull String key) {
+    IOUtils.deleteFile(this.operatingFolder.resolve(key + ".json"));
+  }
+
+  @Override
+  public <T> void updateKey(@NotNull String key, @NotNull T newValue) {
+    Path filePath = this.operatingFolder.resolve(key + ".json");
+    if (Files.notExists(filePath)) {
+      return;
+    }
+
+    JsonConfiguration.newJsonConfiguration(this.backingAdapter).add("key", newValue).write(filePath);
+  }
+
+  @NotNull
+  @Override
+  public <T> Collection<T> readKeys(@NotNull Function<JsonConfiguration, T> function, @NotNull Consumer<Path> failureHandler) {
+    Collection<T> result = new CopyOnWriteArrayList<>();
+    try (DirectoryStream<Path> stream = Files.newDirectoryStream(this.operatingFolder, path -> path.toString().endsWith(".json"))) {
+      for (Path path : stream) {
+        T t = function.apply(JsonConfiguration.newJsonConfiguration(path, this.backingAdapter));
+        if (t == null) {
+          failureHandler.accept(path);
+          continue;
         }
-
-        JsonConfiguration.newJsonConfiguration().add("key", t).write(filePath);
-        return t;
+        result.add(t);
+      }
+    } catch (IOException exception) {
+      exception.printStackTrace();
     }
 
-    @NotNull
-    @Override
-    public <T> Optional<T> getKey(@NotNull String keyName) {
-        Path filePath = this.operatingFolder.resolve(keyName + ".json");
-        if (Files.notExists(filePath)) {
-            return Optional.empty();
-        }
-
-        return Optional.ofNullable(JsonConfiguration.newJsonConfiguration(filePath, this.backingAdapter).get("key", new TypeToken<T>() {
-        }.getType()));
-    }
-
-    @Override
-    public void deleteKey(@NotNull String key) {
-        IOUtils.deleteFile(this.operatingFolder.resolve(key + ".json"));
-    }
-
-    @Override
-    public <T> void updateKey(@NotNull String key, @NotNull T newValue) {
-        Path filePath = this.operatingFolder.resolve(key + ".json");
-        if (Files.notExists(filePath)) {
-            return;
-        }
-
-        JsonConfiguration.newJsonConfiguration(this.backingAdapter).add("key", newValue).write(filePath);
-    }
-
-    @NotNull
-    @Override
-    public <T> Collection<T> readKeys(@NotNull Function<JsonConfiguration, T> function, @NotNull Consumer<Path> failureHandler) {
-        Collection<T> result = new CopyOnWriteArrayList<>();
-        try (DirectoryStream<Path> stream = Files.newDirectoryStream(this.operatingFolder, path -> path.toString().endsWith(".json"))) {
-            for (Path path : stream) {
-                T t = function.apply(JsonConfiguration.newJsonConfiguration(path, this.backingAdapter));
-                if (t == null) {
-                    failureHandler.accept(path);
-                    continue;
-                }
-                result.add(t);
-            }
-        } catch (IOException exception) {
-            exception.printStackTrace();
-        }
-
-        return result;
-    }
+    return result;
+  }
 }
